<resources>
    <string name="app_name">Gravity Management App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="strNum">학번 : </string>
    <string name="strName">이름 : </string>
    <string name="strGrade">학년 : </string>
    <string name="strDate">가입날짜</string>
    <string name="strConfirm">확인</string>
    <string name="strTotal">총원</string>
    <string name="strReset">취소</string>
    <string name="strDepart">부서 : </string>
    <string name="strAutoLogin">자동로그인</string>
    <string name="strSignUp">회원가입</string>
    <string name="strLogin">로그인</string>
    <string name="strMemberNum">인원수</string>
    <string name="strDepartment">부서</string>
    <string name="strTotalPeople">총 인원</string>
    <string name="strDelete">삭제</string>
    <string name="strId">학번</string>
    <string name="strPassword">비밀번호</string>

    <string name="title_activity_view">ViewActivity</string>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_frag">FragActivity</string>
    <string name="title_activity_logo">LogoActivity</string>

</resources>
