<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lee.gravity.LoginActivity"
    android:background="#E7746F">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#69797F"
        android:layout_marginTop="100dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/strId"
            android:id="@+id/txtId"
            android:gravity="center"
            android:background="#E7746F"
            android:textColor="#ffffff"
            android:layout_weight="0.20"
            android:textStyle="bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:id="@+id/txtIdInput"
            android:layout_weight="0.80"
            android:layout_margin="1dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#69797F"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="#E7746F"
            android:gravity="center"
            android:text="@string/strPassword"
            android:id="@+id/txtPassword"
            android:textColor="#ffffff"
            android:layout_weight="0.09"
            android:textAlignment="center"
            android:textStyle="bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/txtPasswordInput"
            android:inputType="textPassword"
            android:background="#ffffff"
            android:layout_margin="1dp"
            android:layout_weight="0.91" />

    </LinearLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strAutoLogin"
            android:id="@+id/chkAutoLogin"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:checked="true"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:enabled="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:padding="1dp"
        android:layout_gravity="right">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strConfirm"
            android:id="@+id/btnConfirm"
            android:layout_gravity="right"
            android:background="#ffffff"
            android:textColor="#E7746F"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strSignUp"
            android:id="@+id/btnSignUp"
            android:layout_gravity="right"
            android:background="#ffffff"
            android:textColor="#E7746F"/>
        </LinearLayout>

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pro_bar"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

    </LinearLayout>
</RelativeLayout>
