<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView"
            android:src="@mipmap/user"
            android:layout_weight="0.5"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/strNum"
                        android:id="@+id/txtNum"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtNumInput"
                        android:layout_gravity="center_horizontal"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/strGrade"
                        android:id="@+id/txtGrade"/>

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/txtGradeInput" />

                </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/strName"
                    android:id="@+id/txtName" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtNameInput"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/strDepart"
                        android:id="@+id/txtDepart" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtDepartInput"
                        android:layout_gravity="center_horizontal"/>

                </LinearLayout>
        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0.19"
            android:background="#ffffff">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/strConfirm"
                android:id="@+id/btnConfirm"
                android:textColor="#ffffff"
                android:layout_marginRight="0.25dp"
                android:background="#2988E6"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0.19"
            android:background="#ffffff">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/strReset"
                android:id="@+id/btnReset"
                android:layout_marginLeft="0.25dp"
                android:layout_marginRight="0.25dp"
                android:textColor="#ffffff"
                android:background="#2988E6"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0.19"
            android:background="#ffffff">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/strDelete"
                android:id="@+id/btnDelete"
                android:layout_marginLeft="0.25dp"
                android:textColor="#ffffff"
                android:background="#2988E6"/>
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pro_bar"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>


</LinearLayout>